@@ -1,6 +1,7 @@
 0.12.0
 ------
 
+* aggregations.Summary implemented for generic aggregations. (#181)
 * Fix TableSet.key_type being lost after proxying Table methods. (#278)
 * Massive performance increases for joins. (#277)
 * Add join benchmark. (#73)
